figcaption mobile : fixed

--- a/index.css
+++ b/index.css
@@ -177,9 +177,6 @@
     .title {
         font-weight: bold;
     }
-    .price{
-        line-height: 25px;
-    }
     figcaption {
         display: flex;
         flex-direction: column;
